fix z-index

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -30,7 +30,6 @@
       }
 
       > .content {
-        z-index: 1;
         background-color: rgba(0, 0, 0, .4);
         display: flex;
         align-items: center;
@@ -58,6 +57,7 @@
       }
 
       > .background {
+        z-index: -1;
         filter: blur(6px);
         background-size: cover;
         background-position: center;
@@ -376,6 +376,7 @@ article.post {
   opacity: 0;
   transition: .2s opacity ease-in-out;
   cursor: zoom-out;
+  z-index: 10;
 
   &.on {
     display: flex;
